fixed overflowing of hero section

--- a/main.css
+++ b/main.css
@@ -212,7 +212,6 @@ nav {
   overflow: hidden;
   isolation: isolate;  
   line-height: 1.1;
-  padding-inline: 20px;
 }
 
 .hero-wrapper::before {
@@ -220,7 +219,7 @@ nav {
   content: "";
   height: 100%;
   width: calc(100% - 1.9rem);
-  top: 50%;
+  top: 52%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-image: url(images/header-bg.jpg);
@@ -235,6 +234,7 @@ nav {
 
 .hero-con {
   display: grid;
+  padding-inline: 1px;
 }
 
 
@@ -255,9 +255,10 @@ nav {
 
 
 .hero h1 {
-  font-size: 4.5rem;
+  font-size: 2.5rem;
   font-weight: var(--ft-w-bold);
   margin-block: 20px 40px; 
+  
 }
 
 
@@ -291,7 +292,7 @@ nav {
   background-color: white;
   z-index: 10;
   transition: background-color 0.4s;
-    cursor: pointer;
+  cursor: pointer;
 }
 .play:hover, .play:focus {
    background-color: var(--clr-primary);
@@ -871,6 +872,10 @@ form button {
     grid-template-columns: 1fr 1fr;
     gap: 20px;
   }
+
+  .hero h1 {
+  font-size: 3rem;
+  }
   
   .journey-grid {
     row-gap: 80px;
@@ -907,6 +912,9 @@ form button {
     background: var(--clr-bg-100);
     width: 100%;
     z-index: 200;
+  }
+  .hero h1 {
+  font-size: 3.8rem;
   }
   nav {
 
@@ -994,6 +1002,10 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .hero h1 {
+  font-size: 4.5rem;
+  
   }
   
   nav {
